Closed Bug 1771571 Opened 4 years ago Closed 4 years ago

Fix include header mess between frame constructor / restyle manager.

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
103 Branch
Tracking Status
firefox103 --- fixed

People

(Reporter: emilio, Assigned: emilio)

Details

Attachments

(1 file)

No description provided.

RestyleManager includes nsPresContextInlines which includes
nsCSSFrameConstructor which includes RestyleManager.

Break the cycle, since turns out the later include is not needed.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/12945fab34cc Fix include header mess between frame constructor / restyle manager. r=layout-reviewers,AlaskanEmily
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 103 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: